fix on mobile

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -55,15 +55,3 @@ summary {
     }
   }
 }
-
-.site-header {
-  height: 0rem;
-  min-height: 0rem;
-  max-height: 0rem;
-}
-
-.main-header {
-  height: 0rem;
-  min-height: 0rem;
-  max-height: 0rem;
-}
